Change constraint to the coordinator layout inside MessageDetails view
This changes the bottom constraint of the coordinator layout that wraps the scrollview with the messages within a conversation when we are offline and the offline banner shows up. Before this the banner was covering the reply buttons inside the message.

--- a/app/src/main/res/layout/activity_message_details.xml
+++ b/app/src/main/res/layout/activity_message_details.xml
@@ -27,6 +27,7 @@
     tools:context=".details.presentation.MessageDetailsActivity">
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:id="@+id/coordinatorLayout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/messageDetailsActionsView"
@@ -81,12 +82,11 @@
         </androidx.core.widget.NestedScrollView>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
-
     <!-- TODO: Will be removed with a ticket for banners -->
     <FrameLayout
         android:id="@+id/layout_no_connectivity_info"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         app:layout_constraintBottom_toTopOf="@id/messageDetailsActionsView"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
