--- a/app/src/main/res/layout/dialog_fragment_group_recipients.xml
+++ b/app/src/main/res/layout/dialog_fragment_group_recipients.xml
@@ -59,7 +59,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/dialog_group_recipients_recycler_view"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/dialog_group_recipients_select_all_checkbox"
         app:layout_constraintBottom_toTopOf="@id/dialog_group_recipients_apply_button"
