--- a/app/src/main/res/layout/fragment_create_account.xml
+++ b/app/src/main/res/layout/fragment_create_account.xml
@@ -156,6 +156,7 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
                         android:layout_height="wrap_content"
                         android:layout_alignParentRight="true"
                         android:layout_centerVertical="true"
+                        android:background="@null"
                         android:layout_marginTop="8dp"/>
 
                 </RelativeLayout>
