--- a/app/src/main/res/layout/activity_contact_group_details.xml
+++ b/app/src/main/res/layout/activity_contact_group_details.xml
@@ -21,7 +21,7 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white"
+    android:background="@color/background_norm"
     android:fitsSystemWindows="true"
     tools:context="ch.protonmail.android.contacts.groups.details.ContactGroupDetailsActivity">
 
