--- a/app/src/main/res/layout/content_contact_group_details.xml
+++ b/app/src/main/res/layout/content_contact_group_details.xml
@@ -31,7 +31,10 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
         style="@style/CustomSearchView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
         android:hint="@string/search_contacts_inside_group"
         android:imeOptions="actionNext"
         android:inputType="text"
