--- a/app/src/main/res/layout/activity_report_bugs.xml
+++ b/app/src/main/res/layout/activity_report_bugs.xml
@@ -22,7 +22,7 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@android:color/white"
+    android:background="@color/background_norm"
     android:fitsSystemWindows="true"
     tools:context=".activities.ReportBugsActivity">
 
