--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -281,15 +281,7 @@
         <item name="android:textColorHint">@color/name_gray</item>
         <item name="android:textSize">@dimen/h5</item>
         <item name="android:paddingLeft">8dp</item>
-        <item name="android:background">@color/white</item>
-    </style>
-
-    <style name="V3EditText.Gray" parent="V3EditText">
-        <item name="android:textColor">@color/new_purple</item>
-        <item name="android:textColorHint">@color/name_gray</item>
-        <item name="android:textSize">@dimen/h5</item>
-        <item name="android:paddingLeft">8dp</item>
-        <item name="android:background">@drawable/new_label_edittext</item>
+        <item name="android:background">@color/background_norm</item>
     </style>
 
     <style name="V3EditText.Inverted.Margin" parent="V3EditText.Inverted">
@@ -660,8 +652,8 @@
         <item name="android:textColorHint">#CACACA</item>
         <item name="android:textSize">@dimen/h3</item>
         <item name="android:paddingLeft">8dp</item>
-        <item name="android:drawableStart">@drawable/ic_menu_search</item>
-        <item name="android:drawableLeft">@drawable/ic_menu_search</item>
+        <item name="android:drawableStart">@drawable/ic_search</item>
+        <item name="android:drawableLeft">@drawable/ic_search</item>
         <item name="android:drawablePadding">@dimen/fields_default_space_small</item>
         <item name="android:background">@drawable/search_edittext_shape</item>
     </style>
