--- a/app/src/main/res/layout/activity_contacts.xml
+++ b/app/src/main/res/layout/activity_contacts.xml
@@ -100,7 +100,7 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
         app:menu_colorNormal="@color/interaction_strong"
         app:menu_colorPressed="@color/dark_purple_statusbar"
         app:menu_colorRipple="@color/dark_purple_statusbar"
-        app:menu_icon="@drawable/fab_add"
+        app:menu_icon="@drawable/ic_add_inverted"
         app:menu_labels_colorNormal="@color/white"
         app:menu_labels_hideAnimation="@anim/fab_slide_out_to_right"
         app:menu_labels_position="@integer/fab_label_start"
