--- a/app/src/main/res/drawable/shape_background_action_sheet_buttons.xml
+++ b/app/src/main/res/drawable/shape_background_action_sheet_buttons.xml
@@ -21,7 +21,11 @@
     android:color="?android:colorControlHighlight">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/white" />
+            <stroke
+                android:width="1dp"
+                android:color="@color/separator_norm" />
+
+            <solid android:color="@color/background_norm" />
             <corners android:radius="@dimen/padding_m" />
         </shape>
     </item>
