Changed icons in the navigation drawer to always be white since the theme of the drawer is always in dark mode

--- a/app/src/main/res/layout/drawer_list_item.xml
+++ b/app/src/main/res/layout/drawer_list_item.xml
@@ -52,7 +52,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:tint="@color/icon_inverted"
+        app:tint="@color/white"
         tools:src="@drawable/ic_inbox" />
 
     <!-- Badge -->
