--- a/app/src/main/res/drawable/ic_contact_edit.xml
+++ b/app/src/main/res/drawable/ic_contact_edit.xml
@@ -24,8 +24,8 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
     android:viewportHeight="24">
   <path
       android:pathData="M6.6,13.2c-0.1,0.1 -0.1,0.2 -0.2,0.3l-1.6,4.8c-0.1,0.2 0,0.5 0.2,0.7c0.1,0.1 0.3,0.2 0.5,0.2c0.1,0 0.1,0 0.2,0l4.8,-1.6c0.1,0 0.2,-0.1 0.3,-0.2l1.6,-1.6l8.9,-8.9l1.6,-1.6c0.3,-0.3 0.3,-0.7 0,-0.9L19.6,1c-0.3,-0.3 -0.7,-0.3 -0.9,0l-1.6,1.6l-8.9,8.9L6.6,13.2zM6.5,17.4L6.9,16L7.9,17L6.5,17.4zM19.2,2.4l2.3,2.3l-0.7,0.7l-2.3,-2.3L19.2,2.4zM17.5,4l2.3,2.3l-8,8L9.6,12L17.5,4zM11,15.2l-1,1l-0.7,0.2c0,0 0,-0.1 -0.1,-0.1l-1.6,-1.6c0,0 -0.1,-0.1 -0.1,-0.1L7.6,14l1,-1L11,15.2z"
-      android:fillColor="@color/white"/>
+      android:fillColor="@color/icon_norm" />
   <path
       android:pathData="M22.5,10.5c-0.4,0 -0.8,0.3 -0.8,0.8v10.2c0,0.1 -0.1,0.2 -0.2,0.2h-19c-0.1,0 -0.2,-0.1 -0.2,-0.2v-19c0,-0.1 0.1,-0.2 0.2,-0.2h10.4c0.4,0 0.8,-0.3 0.8,-0.8s-0.3,-0.7 -0.8,-0.7H2.5c-1,0 -1.8,0.8 -1.8,1.8v19c0,1 0.8,1.8 1.8,1.8h19c1,0 1.8,-0.8 1.8,-1.8V11.3C23.2,10.9 22.9,10.5 22.5,10.5z"
-      android:fillColor="@color/white"/>
+      android:fillColor="@color/icon_norm" />
 </vector>
