--- a/app/src/main/res/drawable/ic_contact_add_group.xml
+++ b/app/src/main/res/drawable/ic_contact_add_group.xml
@@ -24,8 +24,8 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
     android:viewportHeight="24">
   <path
       android:pathData="M23.5,22.3c0,-0.1 0,-0.3 0,-0.4c0,-3.7 -1.9,-6.8 -4.5,-7.9c1.5,-0.8 2.5,-2.3 2.5,-4.1c0,-2.6 -2.1,-4.7 -4.7,-4.7c-1.2,0 -2.3,0.5 -3.1,1.2c-0.4,-2.7 -2.7,-4.7 -5.4,-4.7c-3,0 -5.5,2.5 -5.5,5.5c0,2.2 1.3,4.1 3.2,5c-0.7,0.3 -1.5,0.7 -2.1,1.3c-0.3,0.3 -0.4,0.7 -0.1,1.1c0.3,0.3 0.7,0.4 1.1,0.1c1,-0.9 2.2,-1.3 3.4,-1.3c1.8,0 3.5,1.1 4.7,2.8c0,0 0,0 0,0.1c0,0 0,0 0,0c1,1.5 1.6,3.4 1.7,5.5H11H7.7c-0.4,0 -0.8,0.3 -0.8,0.8s0.3,0.8 0.8,0.8H11h4.4h7.3c0.1,0 0.1,0 0.2,0c0,0 0.1,0 0.1,0c0.2,-0.1 0.3,-0.2 0.4,-0.3c0,0 0,0 0,0c0,-0.1 0.1,-0.1 0.1,-0.2c0,0 0,0 0,0c0,0 0,0 0,0C23.4,22.4 23.5,22.4 23.5,22.3C23.5,22.3 23.5,22.3 23.5,22.3zM16.9,6.7c1.7,0 3.2,1.4 3.2,3.2S18.6,13 16.9,13s-3.2,-1.4 -3.2,-3.2S15.1,6.7 16.9,6.7zM4.3,7.2c0,-2.2 1.8,-4 4,-4c2.2,0 4,1.8 4,4c0,2.2 -1.8,4 -4,4C6.1,11.1 4.3,9.4 4.3,7.2zM10.6,12.2c0.7,-0.3 1.3,-0.7 1.7,-1.3c0.3,1.3 1.2,2.4 2.4,3c-0.3,0.1 -0.7,0.3 -1,0.5C12.9,13.4 11.8,12.6 10.6,12.2zM14.6,15.7c0.7,-0.5 1.5,-0.7 2.3,-0.7c2.7,0 5,2.9 5.1,6.6h-5.8C16.2,19.4 15.6,17.4 14.6,15.7z"
-      android:fillColor="@color/white"/>
+      android:fillColor="@color/icon_norm" />
   <path
       android:pathData="M6.7,18.9H4.7v-1.9c0,-0.4 -0.3,-0.8 -0.8,-0.8s-0.8,0.3 -0.8,0.8v1.9H1.3c-0.4,0 -0.8,0.3 -0.8,0.8s0.3,0.8 0.8,0.8h1.9v1.9c0,0.4 0.3,0.8 0.8,0.8s0.8,-0.3 0.8,-0.8v-1.9h1.9c0.4,0 0.8,-0.3 0.8,-0.8S7.1,18.9 6.7,18.9z"
-      android:fillColor="@color/white"/>
+      android:fillColor="@color/icon_norm" />
 </vector>
