--- a/app/src/main/res/drawable/ic_contact_add_user.xml
+++ b/app/src/main/res/drawable/ic_contact_add_user.xml
@@ -24,8 +24,8 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
     android:viewportHeight="24">
   <path
       android:pathData="M22.5,21.8c0,-4.8 -2.5,-8.9 -6,-10.1c2,-0.9 3.5,-2.9 3.5,-5.3c0,-3.2 -2.6,-5.8 -5.8,-5.8S8.5,3.2 8.5,6.3c0,2.4 1.4,4.4 3.5,5.3c-0.7,0.3 -1.5,0.7 -2.1,1.2c-0.3,0.3 -0.4,0.7 -0.1,1.1c0.3,0.3 0.7,0.4 1.1,0.1c1,-0.8 2.2,-1.3 3.5,-1.3c3.7,0 6.7,4 6.7,8.9H10.3c-0.4,0 -0.8,0.3 -0.8,0.8s0.3,0.8 0.8,0.8h11.4c0.4,0 0.8,-0.3 0.8,-0.8c0,0 0,-0.1 0,-0.1C22.5,22.1 22.5,21.9 22.5,21.8zM10,6.3c0,-2.3 1.9,-4.2 4.2,-4.2s4.2,1.9 4.2,4.2s-1.9,4.2 -4.2,4.2S10,8.7 10,6.3z"
-      android:fillColor="@color/white"/>
+      android:fillColor="@color/icon_norm"/>
   <path
       android:pathData="M10.6,18.5c0,-0.4 -0.3,-0.7 -0.7,-0.7H6.7v-3.2c0,-0.4 -0.3,-0.7 -0.7,-0.7s-0.7,0.3 -0.7,0.7v3.2H2.2c-0.4,0 -0.7,0.3 -0.7,0.7c0,0.4 0.3,0.7 0.7,0.7h3.2v3.2c0,0.4 0.3,0.7 0.7,0.7s0.7,-0.3 0.7,-0.7v-3.2h3.2C10.3,19.2 10.6,18.9 10.6,18.5z"
-      android:fillColor="@color/white"/>
+      android:fillColor="@color/icon_norm"/>
 </vector>
