--- a/app/src/main/res/drawable/ic_contact_address.xml
+++ b/app/src/main/res/drawable/ic_contact_address.xml
@@ -24,8 +24,8 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
     android:viewportHeight="24">
   <path
       android:pathData="M12,1C7.6,1 4.1,4.6 4.1,8.9c0,0.6 0.1,1.6 0.3,2.2c1.3,3.5 6.9,11.2 7.1,11.5c0.1,0.2 0.4,0.3 0.6,0.3c0,0 0,0 0,0c0.2,0 0.5,-0.1 0.6,-0.3c0.2,-0.3 5.4,-8.1 6.8,-11.5c0.3,-0.7 0.3,-1.5 0.3,-2.2C19.9,4.6 16.4,1 12,1zM18.2,10.6c-1,2.6 -4.6,8.1 -6.1,10.3c-1.5,-2.1 -5.3,-7.6 -6.3,-10.3c-0.1,-0.4 -0.2,-1.1 -0.2,-1.7c0,-3.5 2.9,-6.4 6.4,-6.4s6.4,2.9 6.4,6.4C18.4,9.5 18.4,10.1 18.2,10.6z"
-      android:fillColor="@color/white"/>
+      android:fillColor="@color/icon_norm" />
   <path
       android:pathData="M10.1,7.9C9,9 9,10.7 10.1,11.8c0.5,0.5 1.2,0.8 1.9,0.8s1.4,-0.3 1.9,-0.8c1.1,-1.1 1.1,-2.8 0,-3.9S11.1,6.8 10.1,7.9zM12.9,10.7c-0.5,0.5 -1.3,0.5 -1.8,0c-0.5,-0.5 -0.5,-1.3 0,-1.8c0.2,-0.2 0.6,-0.4 0.9,-0.4s0.6,0.1 0.9,0.4C13.4,9.4 13.4,10.2 12.9,10.7z"
-      android:fillColor="@color/white"/>
+      android:fillColor="@color/icon_norm" />
 </vector>
