--- a/app/src/main/res/drawable/ic_contact_email.xml
+++ b/app/src/main/res/drawable/ic_contact_email.xml
@@ -23,7 +23,7 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
     android:viewportHeight="24"
     android:viewportWidth="24">
     <path
-        android:fillColor="@color/white"
+        android:fillColor="@color/icon_norm"
         android:pathData="M22.7,20.2C22.7,20.2 22.8,20.1 22.7,20.2l0,-13.7c0,0 0,-0.1 0,-0.1c0,-0.1 0,-0.1 0,-0.2c0,-0.1 0,-0.1 -0.1,-0.1c0,0 0,-0.1 -0.1,-0.1c0,0 0,0 0,0c0,0 -0.1,-0.1 -0.1,-0.1c0,0 -0.1,-0.1 -0.1,-0.1c0,0 -0.1,0 -0.1,0c0,0 -0.1,0 -0.1,0c0,0 0,0 0,0H2.2c0,0 0,0 0,0c0,0 -0.1,0 -0.1,0c0,0 -0.1,0 -0.1,0c0,0 -0.1,0 -0.1,0.1c0,0 -0.1,0.1 -0.1,0.1c0,0 0,0 0,0c0,0 0,0.1 -0.1,0.1c0,0 -0.1,0.1 -0.1,0.1c0,0.1 0,0.1 0,0.2c0,0 0,0.1 0,0.1v13.7c0,0 0,0 0,0.1c0,0.1 0,0.1 0,0.1c0,0 0,0.1 0.1,0.1c0,0 0,0 0,0.1c0,0 0,0 0,0c0.1,0.1 0.1,0.1 0.2,0.2c0,0 0,0 0.1,0.1c0.1,0 0.2,0.1 0.3,0.1H22c0.1,0 0.2,0 0.3,-0.1c0,0 0,0 0.1,-0.1c0.1,0 0.1,-0.1 0.2,-0.2c0,0 0,0 0,0c0,0 0,0 0,-0.1c0,0 0,-0.1 0.1,-0.1C22.7,20.3 22.7,20.2 22.7,20.2zM17.4,15.9c-0.3,-0.2 -0.8,-0.2 -1,0.2c-0.2,0.3 -0.2,0.8 0.2,1l3.1,2.2h-15l3.1,-2.2c0.3,-0.2 0.4,-0.7 0.2,-1c-0.2,-0.3 -0.7,-0.4 -1,-0.2L3,18.7V8.1l8.6,7.4c0.1,0.1 0.3,0.2 0.5,0.2s0.3,-0.1 0.5,-0.2l8.6,-7.4v10.6L17.4,15.9zM4.3,7.2H20l-7.8,6.7L4.3,7.2z" />
 
 </vector>
