--- a/app/src/main/res/drawable/ic_cross_close.xml
+++ b/app/src/main/res/drawable/ic_cross_close.xml
@@ -24,6 +24,6 @@
     android:viewportHeight="24">
   <path
       android:pathData="M20.7751,4.275L19.7251,3.225L12.0001,10.935L4.2751,3.225L3.2251,4.275L10.9351,12L3.2251,19.725L4.2751,20.775L12.0001,13.065L19.7251,20.775L20.7751,19.725L13.0651,12L20.7751,4.275Z"
-      android:fillColor="#17181C"
+      android:fillColor="@color/icon_norm"
       android:fillType="evenOdd"/>
 </vector>
