--- a/app/src/main/res/drawable/ic_header_info.xml
+++ b/app/src/main/res/drawable/ic_header_info.xml
@@ -24,6 +24,6 @@
     android:viewportHeight="24">
   <path
       android:pathData="M21,3V1.5L3,1.5L3,3L21,3ZM3,21V3H4.5V21H19.5V3H21V21V22.5L3,22.5L3,21ZM18,7.5V6L9,6V7.5L18,7.5ZM7.5,6V7.5H6V6H7.5ZM15,12V10.5H6V12L15,12ZM10.5,16.5V18H6V16.5H10.5ZM18,15V13.5L6,13.5V15L18,15Z"
-      android:fillColor="#17181C"
+      android:fillColor="@color/icon_norm"
       android:fillType="evenOdd"/>
 </vector>
