--- a/app/src/main/res/drawable/ic_trash_empty.xml
+++ b/app/src/main/res/drawable/ic_trash_empty.xml
@@ -27,6 +27,6 @@
       android:fillColor="@color/icon_norm"/>
   <path
       android:pathData="M11,4H15V5H13V15H3V5H1V4H5V2H11V4ZM10,3H6V4H10V3ZM12,5V14H4V5H12Z"
-      android:fillColor="#17181C"
+      android:fillColor="@color/icon_norm"
       android:fillType="evenOdd"/>
 </vector>
