--- a/app/src/main/res/layout/layout_message_details_activity_toolbar.xml
+++ b/app/src/main/res/layout/layout_message_details_activity_toolbar.xml
@@ -24,6 +24,7 @@
     android:id="@+id/collapsingToolbarLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/background_norm"
     app:layout_scrollFlags="scroll|exitUntilCollapsed"
     tools:showIn="@layout/activity_message_details">
 
