--- a/app/src/main/res/layout/fragment_labels_action_sheet.xml
+++ b/app/src/main/res/layout/fragment_labels_action_sheet.xml
@@ -22,6 +22,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/background_norm"
     android:orientation="vertical">
 
     <ch.protonmail.android.ui.actionsheet.ActionSheetHeader
