Bring back dark mode splash screen

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,9 +21,8 @@
 
     <!-- region V4 -->
     <style name="ProtonTheme.Splash.Mail.Light">
-        <item name="android:windowLightStatusBar">true</item>
-        <item name="proton_background_norm">@color/white</item>
-        <item name="proton_text_norm">@color/woodsmoke</item>
+        <item name="proton_background_norm">@color/background_norm</item>
+        <item name="proton_text_norm">@color/text_norm</item>
     </style>
 
     <style name="ProtonTheme.Mail" parent="ProtonTheme">
