--- a/app/src/main/res/layout/activity_contact_details.xml
+++ b/app/src/main/res/layout/activity_contact_details.xml
@@ -29,8 +29,7 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
         android:id="@+id/appbar_contact_details"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fitsSystemWindows="true"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+        android:fitsSystemWindows="true">
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:id="@+id/collapsing_toolbar_layout"
@@ -39,6 +38,7 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
             android:fitsSystemWindows="true"
             app:collapsedTitleGravity="center"
             app:contentScrim="@color/background_norm"
+            app:statusBarScrim="@color/background_norm"
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
             app:titleEnabled="false"
             app:toolbarId="@+id/toolbar">
