--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -77,7 +77,7 @@
 
     <style name="ProtonBadge">
         <item name="android:textAppearance">@style/Proton.Text.Default.Inverted</item>
-        <item name="android:textColor">@color/text_inverted</item>
+        <item name="android:textColor">@color/white</item>
         <item name="android:singleLine">true</item>
         <item name="android:minWidth">@dimen/size_badge</item>
         <item name="android:ellipsize">end</item>
