Changes color of snackbar to a correct color from the design taxonomy
MAILAND-2489

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -175,8 +175,8 @@
     </style>
 
     <style name="ThemeOverlay.App.Snackbar" parent="">
-        <item name="colorSurface">@color/icon_norm</item>
-        <item name="colorOnSurface">@color/icon_norm</item>
+        <item name="colorSurface">?attr/proton_notification_norm</item>
+        <item name="colorOnSurface">?attr/proton_notification_norm</item>
     </style>
 
     <style name="ThemeOverlay.App.Snackbar.Error" parent="">
