--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -77,6 +77,7 @@
     <!-- Side Drawer -->
     <dimen name="width_drawer_body">312dp</dimen>
     <dimen name="height_drawer_header">48dp</dimen>
+    <dimen name="height_drawer_section_name">56dp</dimen>
     <dimen name="height_drawer_primaryitem">48dp</dimen>
     <dimen name="height_drawer_badge">24dp</dimen>
     <dimen name="height_drawer_footer">96dp</dimen>
