--- a/app/src/main/res/layout/drawer_section_name_item.xml
+++ b/app/src/main/res/layout/drawer_section_name_item.xml
@@ -21,26 +21,41 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/height_drawer_section_name">
+    android:layout_height="@dimen/height_drawer_section_name"
+    android:layout_marginTop="@dimen/padding_l">
+
+    <include layout="@layout/drawer_list_item_divider"
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/drawer_section_name_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="@style/Proton.Text.Caption"
-        android:textColor="@color/text_hint"
+        android:textAppearance="@style/Proton.Text.Default"
+        android:textColor="@color/text_weak"
         tools:text="Folders"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="@dimen/padding_xxl"
         android:layout_marginHorizontal="@dimen/padding_l" />
 
-    <include layout="@layout/drawer_list_item_divider"
-        android:layout_width="0dp"
-        android:layout_height="1dp"
-        app:layout_constraintStart_toStartOf="@id/drawer_section_name_text_view"
+    <ImageButton
+        android:id="@+id/drawer_section_name_create_button"
+        style="@style/ProtonImage.ImageButton"
+        android:layout_width="@dimen/size_icon_m"
+        android:layout_height="@dimen/size_icon_m"
+        android:layout_marginHorizontal="@dimen/padding_l"
+        android:layout_marginVertical="@dimen/padding_s"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginEnd="@dimen/padding_l"
-        app:layout_constraintBottom_toBottomOf="parent"/>
-
+        android:src="@drawable/ic_plus"
+        app:tint="@color/icon_weak"
+        android:visibility="gone"
+        tools:visibility="visible"
+        android:contentDescription="@string/drawer_create_icon_description"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
