--- a/app/src/main/res/layout/settings_item.xml
+++ b/app/src/main/res/layout/settings_item.xml
@@ -21,4 +21,7 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:minHeight="@dimen/settings_item_min_height"
-    android:padding="@dimen/padding_l"/>
+    android:paddingTop="@dimen/padding_m"
+    android:paddingBottom="@dimen/padding_m"
+    android:paddingStart="@dimen/padding_l"
+    android:paddingEnd="@dimen/padding_l" />
