Center the text in Attachments counter in Composer
MAILAND-2578

--- a/app/src/main/res/layout/drawer_list_item.xml
+++ b/app/src/main/res/layout/drawer_list_item.xml
@@ -60,10 +60,8 @@
         android:id="@+id/drawer_item_notifications_text_view"
         style="@style/ProtonBadge"
         android:layout_width="wrap_content"
-        android:minWidth="@dimen/height_drawer_badge"
-        android:layout_height="@dimen/height_drawer_badge"
+        android:layout_height="@dimen/size_badge"
         android:paddingHorizontal="@dimen/padding_m"
-        android:gravity="center"
         android:textSize="@dimen/h6"
         android:visibility="invisible"
         android:layout_marginEnd="@dimen/padding_l"
