--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -82,6 +82,7 @@
         <item name="android:textColor">@color/white</item>
         <item name="android:singleLine">true</item>
         <item name="android:minWidth">@dimen/size_badge</item>
+        <item name="android:gravity">center</item>
         <item name="android:ellipsize">end</item>
         <item name="android:background">@drawable/shape_stretchable_circle</item>
         <item name="backgroundTint">?brand_norm</item>
