Handle click and selection change on ParentFolderPickerViewModel.kt
MAILAND-2613

--- a/app/src/main/res/layout/item_parent_picker_folder.xml
+++ b/app/src/main/res/layout/item_parent_picker_folder.xml
@@ -44,7 +44,7 @@
     <TextView
         android:id="@+id/parent_picker_folder_name_text_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_gravity="center_vertical"
         android:textAppearance="@style/Proton.Text.Default"
         android:textColor="@color/text_norm"
